--- a/startpage.html
+++ b/startpage.html
@@ -458,15 +458,15 @@
       departures: {
         stopIds: ['U680Z1P'],
         stopLabel: 'Slavia – nádraží Eden',
-        apiKey: '',
+        apiKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NDA4NSwiaWF0IjoxNzYxNTg5NjAzLCJleHAiOjExNzYxNTg5NjAzLCJpc3MiOiJnb2xlbWlvIiwianRpIjoiZmJjNzNiMjYtYjg5Mi00MzA3LWJhZTItMGUwMWJhOTRjYjYyIn0.2qkhf1N1Xd5JI_FDdTyEJsZXUHvE1mFBNx2X2PE8-Rw',
         directionFilter: ['Kooh-i-noor', 'Koh-i-noor'],
         limit: 8,
         minutesBefore: 0,
-        minutesAfter: 45,
+        minutesAfter: 20,
         timezone: 'Europe/Prague'
       },
       connectivity: {
-        url: 'http://192.168.1.1/status',
+        url: 'http://94.241.91.32/status',
         method: 'GET',
         timeoutMs: 4000,
         mode: 'no-cors'
