--- a/startpage.html
+++ b/startpage.html
@@ -466,7 +466,7 @@
         timezone: 'Europe/Prague'
       },
       connectivity: {
-        url: 'http://94.241.91.32/status',
+        url: 'http://94.241.91.32',
         method: 'GET',
         timeoutMs: 4000,
         mode: 'no-cors'
