--- a/startpage.html
+++ b/startpage.html
@@ -725,131 +725,133 @@
       }
 
       try {
-        const idParamName = detectIdParam(stopIds);
-        const params = new URLSearchParams({
-          minutesBefore: String(CONFIG.departures.minutesBefore ?? 0),
-          minutesAfter: String(CONFIG.departures.minutesAfter ?? 30),
-          limit: String(Math.max(CONFIG.departures.limit ?? 6, 1)),
-          preferredTimezone: CONFIG.departures.timezone || 'Europe/Prague',
-          includeMetroTrains: 'true'
-        });
-        params.set(idParamName, stopIds.join(','));
+  const idParamName = detectIdParam(stopIds);
+  const params = new URLSearchParams({
+    minutesBefore: String(CONFIG.departures.minutesBefore ?? 0),
+    minutesAfter: String(CONFIG.departures.minutesAfter ?? 30),
+    limit: String(Math.max(CONFIG.departures.limit ?? 6, 1)),
+    preferredTimezone: CONFIG.departures.timezone || 'Europe/Prague',
+    includeMetroTrains: 'true'
+  });
+  params.set(idParamName, stopIds.join(','));
 
-        const response = await fetch(`https://api.golemio.cz/v2/pid/departureboards?${params.toString()}`, {
-          headers: {
-            'X-Access-Token': apiKey,
-            'Accept': 'application/json'
-          }
-        });
+  const url = `https://api.golemio.cz/v2/pid/departureboards?${params.toString()}`;
+  console.log('[MHD] URL:', url);
 
-        if (!response.ok) throw new Error('Nepodařilo se načíst odjezdy. Zkontroluj klíč nebo limity API.');
-        const data = await response.json();
-        const directionFilters = safeArray(CONFIG.departures.directionFilter)
-          .flatMap(buildSearchVariants)
-          .filter(Boolean);
+  const response = await fetch(url, {
+    headers: {
+      'X-Access-Token': apiKey,
+      'Accept': 'application/json'
+    }
+  });
 
-        const allDepartures = Array.isArray(data.departures) ? data.departures : [];
+  if (!response.ok) {
+    let bodyText = '';
+    try { bodyText = await response.text(); } catch {}
+    console.error('[MHD] HTTP error', response.status, bodyText);
+    throw new Error(`HTTP ${response.status}: ${bodyText || 'Nepodařilo se načíst odjezdy.'}`);
+  }
 
-        const filteredDepartures = directionFilters.length
-          ? allDepartures.filter(item => {
-              const possible = [
-                item.trip?.headsign,
-                item.trip?.direction,
-                item.last_stop?.name,
-                item.route?.long_name,
-                item.route?.description
-              ]
-                .flatMap(buildSearchVariants)
-                .filter(Boolean);
+  const data = await response.json();
 
-              if (!possible.length) return false;
+  const directionFilters = safeArray(CONFIG.departures.directionFilter)
+    .flatMap(buildSearchVariants)
+    .filter(Boolean);
 
-              return directionFilters.some(filterTerm =>
-                possible.some(candidate =>
-                  candidate.includes(filterTerm) || filterTerm.includes(candidate)
-                )
-              );
-            })
-          : allDepartures;
+  const allDepartures = Array.isArray(data.departures) ? data.departures : [];
 
-        const departures = (filteredDepartures.length ? filteredDepartures : allDepartures)
-          .slice(0, CONFIG.departures.limit ?? 6);
+  const filteredDepartures = directionFilters.length
+    ? allDepartures.filter(item => {
+        const possible = [
+          item.trip?.headsign,
+          item.trip?.direction,
+          item.last_stop?.name,
+          item.route?.long_name,
+          item.route?.description
+        ].flatMap(buildSearchVariants).filter(Boolean);
 
-        if (!departures.length) {
-          departuresContent.innerHTML = `
-            <p>Nebyly nalezeny žádné odjezdy pro zadané parametry.</p>
-            <p class="timestamp">Zastávka: ${CONFIG.departures.stopLabel} · Poslední kontrola ${formatDate(new Date())}</p>
-          `;
-          return;
-        }
+        if (!possible.length) return false;
 
-        const usedFilter = filteredDepartures.length
-          ? `směr ${formatDirectionSummary()}`
-          : 'všechny směry';
-        const filterNote = directionFilters.length && !filteredDepartures.length
-          ? '⚠️ filtr nic nenašel, zobrazuji '
-          : '';
+        return directionFilters.some(filterTerm =>
+          possible.some(candidate =>
+            candidate.includes(filterTerm) || filterTerm.includes(candidate)
+          )
+        );
+      })
+    : allDepartures;
 
-        const listMarkup = departures.map(dep => {
-          const scheduled = dep.departure_timestamp?.scheduled;
-          const predicted = dep.departure_timestamp?.predicted;
-          const scheduledDate = toDate(scheduled);
-          const predictedDate = toDate(predicted);
-          const displayDate = predictedDate || scheduledDate;
-          const absoluteLabel = formatClock(displayDate);
-          const countdownMinutes = minutesUntil(displayDate);
-          const countdownLabel = countdownMinutes === null ? '—' : countdownMinutes === 0 ? 'odjíždí' : `${countdownMinutes} min`;
-          const countdownClass = countdownMinutes !== null && countdownMinutes <= 1 ? 'success' : '';
+  const departures = (filteredDepartures.length ? filteredDepartures : allDepartures)
+    .slice(0, CONFIG.departures.limit ?? 6);
 
-          let delayMinutes = null;
-          if (scheduledDate && predictedDate) {
-            delayMinutes = Math.round((predictedDate.getTime() - scheduledDate.getTime()) / 60000);
-          } else if (typeof dep.departure_delay === 'number') {
-            delayMinutes = Math.round(dep.departure_delay / 60);
-          }
+  if (!departures.length) {
+    departuresContent.innerHTML = `
+      <p>Nebyly nalezeny žádné odjezdy pro zadané parametry.</p>
+      <p class="timestamp">Zastávka: ${CONFIG.departures.stopLabel} · Poslední kontrola ${formatDate(new Date())}</p>
+    `;
+    return;
+  }
 
-          let delayBadge = '';
-          if (delayMinutes !== null) {
-            if (delayMinutes === 0) {
-              delayBadge = createBadge('Včas', 'success');
-            } else if (delayMinutes > 0) {
-              delayBadge = createBadge(`+${delayMinutes} min`, 'danger');
-            } else {
-              delayBadge = createBadge(`${delayMinutes} min`, 'success');
-            }
-          }
+  const usedFilter = filteredDepartures.length ? `směr ${formatDirectionSummary()}` : 'všechny směry';
+  const filterNote = directionFilters.length && !filteredDepartures.length ? '⚠️ filtr nic nenašel, zobrazuji ' : '';
 
-          const line = dep.route?.short_name || dep.route?.long_name || 'Linka';
-          const routeTypeRaw = dep.route?.type;
-          const routeType = typeof routeTypeRaw === 'number' ? routeTypeRaw : Number(routeTypeRaw);
-          const icon = Number.isFinite(routeType) ? (ROUTE_TYPE_ICONS[routeType] || '') : '';
-          const platform = dep.stop?.platform_code || dep.stop?.platform_name;
-          const headsignBase = dep.trip?.headsign || dep.trip?.direction || dep.last_stop?.name || '—';
-          const headsign = platform ? `${headsignBase} · st. ${platform}` : headsignBase;
+  const listMarkup = departures.map(dep => {
+    const scheduled = dep.departure_timestamp?.scheduled;
+    const predicted = dep.departure_timestamp?.predicted;
+    const scheduledDate = toDate(scheduled);
+    const predictedDate = toDate(predicted);
+    const displayDate = predictedDate || scheduledDate;
+    const absoluteLabel = formatClock(displayDate);
+    const countdownMinutes = minutesUntil(displayDate);
+    const countdownLabel = countdownMinutes === null ? '—' : countdownMinutes === 0 ? 'odjíždí' : `${countdownMinutes} min`;
+    const countdownClass = countdownMinutes !== null && countdownMinutes <= 1 ? 'success' : '';
 
-          const badges = [createBadge(countdownLabel, countdownClass), delayBadge].filter(Boolean).join('');
+    let delayMinutes = null;
+    if (scheduledDate && predictedDate) {
+      delayMinutes = Math.round((predictedDate.getTime() - scheduledDate.getTime()) / 60000);
+    } else if (typeof dep.departure_delay === 'number') {
+      delayMinutes = Math.round(dep.departure_delay / 60);
+    }
 
-          return `
-            <div class="departure-item">
-              <div>
-                <div class="badge">${icon ? `${icon} ` : ''}${line}</div>
-                <div class="departure-destination">${headsign}</div>
-              </div>
-              <div class="departure-time">${absoluteLabel}</div>
-              <div class="departure-meta">${badges}</div>
-            </div>
-          `;
-        }).join('');
+    let delayBadge = '';
+    if (delayMinutes !== null) {
+      if (delayMinutes === 0) delayBadge = createBadge('Včas', 'success');
+      else if (delayMinutes > 0) delayBadge = createBadge(`+${delayMinutes} min`, 'danger');
+      else delayBadge = createBadge(`${delayMinutes} min`, 'success');
+    }
 
-        departuresContent.innerHTML = `
-          <div class="departure-list">${listMarkup}</div>
-          <div class="timestamp">
-            ${CONFIG.departures.stopLabel} · ${filterNote}${usedFilter} · Poslední kontrola ${formatDate(new Date())}
-          </div>
-        `;
-      } catch (error) {
-        departuresContent.innerHTML = `<p class="error-message">${error.message}</p>`;
-      }
+    const line = dep.route?.short_name || dep.route?.long_name || 'Linka';
+    const routeTypeRaw = dep.route?.type;
+    const routeType = typeof routeTypeRaw === 'number' ? routeTypeRaw : Number(routeTypeRaw);
+    const icon = Number.isFinite(routeType) ? (ROUTE_TYPE_ICONS[routeType] || '') : '';
+    const platform = dep.stop?.platform_code || dep.stop?.platform_name;
+    const headsignBase = dep.trip?.headsign || dep.trip?.direction || dep.last_stop?.name || '—';
+    const headsign = platform ? `${headsignBase} · st. ${platform}` : headsignBase;
+
+    const badges = [createBadge(countdownLabel, countdownClass), delayBadge].filter(Boolean).join('');
+
+    return `
+      <div class="departure-item">
+        <div>
+          <div class="badge">${icon ? `${icon} ` : ''}${line}</div>
+          <div class="departure-destination">${headsign}</div>
+        </div>
+        <div class="departure-time">${absoluteLabel}</div>
+        <div class="departure-meta">${badges}</div>
+      </div>
+    `;
+  }).join('');
+
+  departuresContent.innerHTML = `
+    <div class="departure-list">${listMarkup}</div>
+    <div class="timestamp">
+      ${CONFIG.departures.stopLabel} · ${filterNote}${usedFilter} · Poslední kontrola ${formatDate(new Date())}
+    </div>
+  `;
+} catch (error) {
+  // sem dáme detailní chybovou hlášku
+  departuresContent.innerHTML = `<p class="error-message">${error.message}</p>`;
+}
+
     }
 
     function withTimeout(promise, timeout) {
