--- a/startpage.html
+++ b/startpage.html
@@ -560,15 +560,6 @@
       return [];
     }
 
-    function detectIdParam(ids) {
-      if (!ids.length) return 'ids';
-      const isASW = ids.every(id => /^\d+(?:_\d+)?$/.test(id));
-      const isCIS = ids.every(id => /^[A-Z]\d+Z\d+P$/i.test(id));
-      if (isASW) return 'aswIds';
-      if (isCIS) return 'cisIds';
-      return 'ids';
-    }
-
     function normalizeSearchText(value) {
       if (typeof value !== 'string') return '';
       return value
@@ -726,23 +717,25 @@
 
       try {
   const idParamName = detectIdParam(stopIds);
-  const params = new URLSearchParams({
-    minutesBefore: String(CONFIG.departures.minutesBefore ?? 0),
-    minutesAfter: String(CONFIG.departures.minutesAfter ?? 30),
-    limit: String(Math.max(CONFIG.departures.limit ?? 6, 1)),
-    preferredTimezone: CONFIG.departures.timezone || 'Europe/Prague',
-    includeMetroTrains: 'true'
-  });
-  params.set(idParamName, stopIds.join(','));
+const params = new URLSearchParams({
+  minutesBefore: String(CONFIG.departures.minutesBefore ?? 0),
+  minutesAfter: String(CONFIG.departures.minutesAfter ?? 30),
+  limit: String(Math.max(CONFIG.departures.limit ?? 6, 1)),
+  preferredTimezone: CONFIG.departures.timezone || 'Europe/Prague',
+  includeMetroTrains: 'true'
+});
+  params.set('ids', stopIds.join(','));
 
   const url = `https://api.golemio.cz/v2/pid/departureboards?${params.toString()}`;
   console.log('[MHD] URL:', url);
 
-  const response = await fetch(url, {
-    headers: {
-      'X-Access-Token': apiKey,
-      'Accept': 'application/json'
-    }
+  const response = await fetch(`https://api.golemio.cz/v2/pid/departureboards?${params.toString()}`, {
+  headers: { 'X-Access-Token': apiKey, 'Accept': 'application/json' }
+});
+if (!response.ok) {
+  const text = await response.text().catch(() => '');
+  throw new Error(`HTTP ${response.status}: ${text || response.statusText}`);
+}
   });
 
   if (!response.ok) {
