--- a/startpage.html
+++ b/startpage.html
@@ -173,7 +173,7 @@
         stopIds: ['U680Z1P'],           // GTFS stop_id pro Slavia – nádraží Eden
         stopLabel: 'Slavia – nádraží Eden',
         apiKey: '',                     // token se bere z localStorage (tlačítko dole)
-        directionFilter: ['Koh-i-noor'],// volitelný textový filtr
+        directionFilter: [],// volitelný textový filtr
         platformFilter: 'A',            // ← NOVÉ: filtr podle stání (A/B)
         limit: 8,
         minutesBefore: 0,
